correct jvm options for running chronicle map on macos